@@ -89,6 +89,21 @@ test_that("cv.ncvreg() seems to work", {
   plot(cvfit)
 })  
 
-## plot
-## cv.ncvreg
-
+test_that("penalty.factor seems to work", {
+  n <- 50
+  p <- 4
+  X <- matrix(rnorm(n*p), ncol=p)
+  y <- rnorm(n)
+  yy <- y > .5
+  penalty.factor=c(0,0,1,10)
+  
+  par(mfrow=c(2,2))
+  fit <- ncvreg(X, y)
+  plot(fit)
+  fit <- ncvreg(X, y, penalty.factor=penalty.factor)
+  plot(fit)
+  fit <- ncvreg(X, yy, family="binomial")
+  plot(fit)
+  fit <- ncvreg(X, yy, family="binomial", penalty.factor=penalty.factor)
+  plot(fit)
+})  
